ECL 10.1.1:
===========

* Bugs fixed:

 - DIRECTORY used stat() also on files that did not match the directory masks.

 - The syntax for matching strings in DIRECTORY is now the same as in
   PATHNAME-MATCH-P. Formerly there were small differences, the forming
   understanding characters #\? and #\\

 - Standalone executables do not require the existence of the ECLDIR directory
   to start up -- it may be required, though, for working Unicode because the
   encodings are stored there.

 - PROCESS-JOIN was exported from the wrong package.

 - PROCESS-JOIN would fail when called while a thread was being started.

 - The output values of a process or thread are now collected in the process
   object and returned by PROCESS-JOIN.

 - The interrupt servicing thread must explicitely include the interrupt signal
   among the ones it captures. Otherwise it will never be interrupted itself.

* Visible changes:

 - Significant speed up in access to hash tables of up to 30% by writing
   specialized loops for EQ, EQL, EQUAL, EQUALP and package hash tables.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***