@@ -28,6 +28,10 @@ ECL 10.1.1:
  - Significant speed up in access to hash tables of up to 30% by writing
    specialized loops for EQ, EQL, EQUAL, EQUALP and package hash tables.
 
+ - New function EXT:ENVIRON returns the list of strings that makes up the
+   process environment. This is the equivalent of POSIX (char **environ)
+   and Windows' GetEnvironmentStrings.
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
